<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_main"
        android:title="@string/tickets" />

    <item
        android:id="@+id/hotels_fragment"
        android:icon="@drawable/ic_hotels"
        android:title="@string/hotels" />

    <item
        android:id="@+id/short_fragment"
        android:icon="@drawable/ic_shorter"
        android:title="@string/shorter" />

    <item
        android:id="@+id/subscribes_fragment"
        android:icon="@drawable/ic_subscribes"
        android:title="@string/subscribes" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>