<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/ticket_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text ="2390 Р"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/title_tv" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticket_price_tv"
        android:contentDescription="@string/to_price"/>
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text ="@string/stambul"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/status_img"
        app:layout_constraintTop_toTopOf="@+id/status_img" />

    <TextView
        android:id="@+id/flying_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/ticket_price_tv"
        app:layout_constraintStart_toStartOf="@+id/title_tv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="@color/gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/status_img"
        app:layout_constraintTop_toBottomOf="@+id/flying_time" />

    <View
        android:id="@+id/status_img"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/flying_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>